--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -11,7 +11,7 @@
       "node"
     ],
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx",
+    "jsxImportSource": "react",
     "outDir": "./dist"
   },
   "exclude": [
