feat: Introduce new dashboard pages for analytics, projects, team, and lifecycle, along with a dashboard block configuration and a progress UI component.

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "@vitest/ui": "^4.0.17",
         "typescript": "^5.0.0",
         "vitest": "^4.0.17"
+    },
+    "dependencies": {
+        "@radix-ui/react-progress": "^1.1.8"
     }
 }
