feat: Add promo codes, physical rooms, and pricing rules management
- Add promo codes page with card, form dialog, and status badge components
- Add physical room management components to hotel details
- Add pricing rules components for dynamic pricing configuration
- Add collapsible and switch UI components
- Add data hooks for promo codes, physical rooms, pricing rules, and room inventory
- Update shared booking types and API mock handlers

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vitest": "^4.0.17"
     },
     "dependencies": {
-        "@radix-ui/react-progress": "^1.1.8"
+        "@radix-ui/react-progress": "^1.1.8",
+        "@radix-ui/react-switch": "^1.2.6"
     }
 }
